# puck

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE_MIT  README.md  bors.toml  run.sh
.cargo/: config.toml
.github/workflows/: cron.yml  test.yml
.semaphore/: semaphore.yml
autobahn/: fuzzingclient.json  server-results.json
examples/chat/: Cargo.toml
examples/chat/src/: main.rs
examples/echo/: Cargo.toml
examples/echo/src/: main.rs
examples/list/: Cargo.toml
examples/list/src/: main.rs
examples/liveview/: Cargo.toml
examples/liveview/src/: main.rs
examples/server/: Cargo.toml
examples/server/src/: main.rs
puck/: Cargo.toml
puck/src/: encoder.rs  lib.rs  request.rs  response.rs
puck/src/app/: mod.rs
puck/src/body/: mime.rs  mod.rs
puck/src/core/: mod.rs  router.rs
puck/src/core/router/: match_url.rs  mod.rs
puck/src/regressions/: mod.rs
puck/src/request/: builder.rs  mod.rs
puck/src/response/: builder.rs  encoder.rs  mod.rs
puck/src/ws/: frame.rs  message.rs  mod.rs  send.rs  upgrade.rs  websocket.rs
puck/tests/: request_parsing.proptest-regressions  request_parsing.rs  response_parsing.proptest-regressions  response_parsing.rs
puck_codegen/: Cargo.toml
puck_codegen/src/: channels.rs  handler.rs  lib.rs  sm.rs
puck_liveview/: Cargo.toml
puck_liveview/client/: index.html  index.js
puck_liveview/src/: init.rs  lib.rs
puck_liveview/src/client/: mod.rs
puck_liveview/src/component/: mod.rs
puck_liveview/src/dom/: event.rs  listener.rs  mod.rs
puck_liveview/src/dom/element/: mod.rs  orchestrator.rs  render.rs
puck_liveview/src/dom/element/diff/: mod.rs  test_diffing.rs
puck_liveview/src/dom/element/diff/changeset/: apply.rs  instruction_serializer.rs  mod.rs
puck_liveview/src/dom/element/diff/snapshots/: puck_liveview__dom__element__diff__test__more_complex_diff.snap.new  puck_liveview__dom__element__diff__test__test_add_child_before_change.snap  puck_liveview__dom__element__diff__test__test_add_child_change.snap  puck_liveview__dom__element__diff__test__test_name_change.snap  puck_liveview__dom__element__diff__test__test_single_element_attribute_change.snap  puck_liveview__dom__element__diff__test__test_single_element_text_change.snap  puck_liveview__dom__element__diff__test_diffing__more_complex_diff.snap  puck_liveview__dom__element__diff__test_diffing__test_add_child_before_change.snap  puck_liveview__dom__element__diff__test_diffing__test_add_child_change.snap  puck_liveview__dom__element__diff__test_diffing__test_name_change.snap  puck_liveview__dom__element__diff__test_diffing__test_single_element_attribute_change.snap  puck_liveview__dom__element__diff__test_diffing__test_single_element_text_change.snap
puck_liveview/src/html/: bigger_tree  id.rs  id_not_starting_from_zero  mod.rs  tree
puck_liveview/src/html/snapshots/: puck_liveview__html__html_conversion_medium.snap  puck_liveview__html__html_conversion_offset_starting_id.snap  puck_liveview__html__html_conversion_simple.snap
puck_liveview/src/regressions/: mod.rs
puck_liveview/tests/: diffing.rs
scripts/: ci_server_test.sh  proptest.sh  proptest_liveview.sh  server_test.sh
