[package]
name = "puck"
version = "0.1.0"
authors = ["teymour-aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
httparse = "1.4.1"
thiserror = "1.0.26"
puck_codegen = { path = "../puck_codegen" }
url = "2.2.2"
sha-1 = "0.9.6"
base64 = "0.13.0"
byteorder = "1.4.3"
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
proptest = { version = "1.0.0", optional = true }

[features]
_test_fuzzing = ["proptest"]
