[package]
name = "puck"
version = "0.1.0"
authors = ["teymour-aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"
httparse = "1.5.1"
thiserror = "1.0.30"
url = "2.2.2"
sha-1 = "0.9.8"
base64 = "0.13.0"
byteorder = "1.4.3"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
proptest = { version = "1.0.0", optional = true }
lunatic = "0.7.0"

[features]
_test_fuzzing = ["proptest"]
