[package]
name = "puck"
version = "0.1.0"
authors = ["teymour-aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
httparse = "1.7.1"
thiserror = "1.0.31"
url = "2.2.2"
sha-1 = "0.10.0"
base64 = "0.13.0"
byteorder = "1.4.3"
log = "0.4.17"
serde = { version = "1.0.138", features = ["derive"] }
lunatic = "0.9.1"
