[package]
name = "puck_liveview"
version = "0.1.0"
authors = ["teymour-aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

[dependencies]
derive_builder = "0.10.2"
puck = { path = "../puck" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
maplit = "1.0.2"
lunatic = "0.7.0"
proptest = { version = "1.0.0", optional = true }

[target.'cfg(not(target_arch="wasm32"))'.dependencies.malvolio]
version = "0.3.1"
features = ["pub_fields", "with_proptest"]

[target.'cfg(target_arch="wasm32")'.dependencies.malvolio]
version = "0.3.1"
features = ["pub_fields"]

[dev-dependencies]
insta = "1.8.0"
scraper = "0.12.0"

[features]
apply = []
