[package]
name = "puck_liveview"
version = "0.1.0"
authors = ["teymour-aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

[dependencies]
derive_builder = "0.11.2"
puck = { path = "../puck" }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
lunatic = "0.9.1"
fuzzcheck = { version = "0.12.0", optional = true }

[target.'cfg(not(target_arch="wasm32"))'.dependencies.malvolio]
git = "https://github.com/bailion/malvolio/"
rev = "2bba3de"
features = ["pub_fields", "fuzz"]
version = "0.3.1"

[target.'cfg(target_arch="wasm32")'.dependencies.malvolio]
git = "https://github.com/bailion/malvolio/"
rev = "2bba3de"
features = ["pub_fields"]
version = "0.3.1"

[dev-dependencies]
insta = "1.15.0"
scraper = "0.13.0"
serde_json = "1.0.82"

[features]
apply = []
_fuzz = ["apply", "fuzzcheck"]
