[package]
name = "chat"
version = "0.1.0"
authors = ["teymour-aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
lunatic = "0.3.10"
maplit = "1.0.2"
puck = { path = "../../puck" }
puck_liveview = { path = "../../puck_liveview" }
serde = { version = "1.0.126", features = ["derive"] }
