[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puck = { path = "../../puck" }
puck_liveview = { path = "../../puck_liveview" }
serde = { version = "1.0.134", features = ["derive"] }
