[package]
name = "list"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puck = { path = "../../puck" }
lunatic = { version = "0.6.1" }
serde = { version = "1.0.130", features = ["derive"] }
malvolio = "0.3.1"
