[package]
name = "liveview"
version = "0.1.0"
authors = ["teymour-aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
maplit = "1.0.2"
puck = { path = "../../puck" }
puck_liveview = { path = "../../puck_liveview" }
serde = { version = "1.0.126", features = ["derive"] }
