[package]
name = "server"
version = "0.1.0"
authors = ["teymour-aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lunatic = "0.3.10"
puck = { path = "../../puck" }
serde = { version = "1.0.126", features = ["derive"] }
